# GameSquad---Game-Chat-in-Django

./: .env  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
gamesquad/: apicalltest.html  db.sqlite3  manage.py
gamesquad/accounts/: models.py
gamesquad/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_username.py
gamesquad/base/: admin.py  forms.py  models.py  urls.py  views.py
gamesquad/base/api/: views.py
gamesquad/base/migrations/: 0001_initial.py  0002_profile_avatar.py  0002_roomgame_room_host_message_room_topic.py  0003_alter_room_options_rename_topic_room_game.py  0003_profile_bio.py  0004_alter_profile_avatar.py  0004_room_participants.py  0005_rename_roomgame_game_alter_message_options.py  0006_profile.py
gamesquad/base/templates/base/: activity.html  activity_component.html  delete.html  delete_old.html  edit-user.html  feed_component.html  game_component.html  games.html  home.html  login_register.html  login_register_old.html  room.html  room_form.html  room_form_old.html  room_old.html  user_profile.html  user_profile_old.html
gamesquad/gamesquad/: asgi.py  settings.py  urls.py  wsgi.py
gamesquad/nginx_static/gamesquad/static/styles/: style.css
gamesquad/static/styles/: style.css
gamesquad/templates/: main.html  navbar.html
